--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,14 @@
 RewriteEngine on
-php_flag display_errors on
+
+#php_flag display_errors on
+
+#php_flag  display_errors        on 
+#php_flag  display_startup_errors on 
+#php_value error_reporting        2047 
+
+php_flag display_errors off 
+php_flag display_startup_errors off
+
 AddDefaultCharset utf-8
 Options +FollowSymLinks
 IndexIgnore */*
