--- a/.htaccess
+++ b/.htaccess
@@ -1,20 +1,10 @@
-RewriteEngine on
-
-#php_flag display_errors on
-
-#php_flag  display_errors        on 
-#php_flag  display_startup_errors on 
-#php_value error_reporting        2047 
-
-php_flag display_errors off 
-php_flag display_startup_errors off
-
-AddDefaultCharset utf-8
-Options +FollowSymLinks
-IndexIgnore */*
-# if a directory or a file exists, use it directly
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-# otherwise forward it to index.php
-RewriteRule . index.php
-RewriteRule \.git - [F,L]
+ php_value error_reporting 1
+ AddDefaultCharset utf-8
+	Options +FollowSymLinks 
+	IndexIgnore */*
+	RewriteEngine on
+	# if a directory or a file exists, use it directly 
+	RewriteCond %{REQUEST_FILENAME} !-f 
+	RewriteCond %{REQUEST_FILENAME} !-d
+	# otherwise forward it to index.php 
+	RewriteRule . index.php
